8272985: Reference discovery is confused about atomicity and degree of parallelism

Reviewed-by: ayang, kbarrett